--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "laravel/ui": "^4.5",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^11.0.1"
+        "phpunit/phpunit": "^11.0.1",
+        "smknstd/fakerphp-picsum-images": "^1.0"
     },
     "autoload": {
         "psr-4": {
