--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "postinstall": "mkdir -p public/storage/profiles"
+
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
