--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
-        "postinstall": "mkdir -p public/storage/profiles"
-
+        "build": "vite build"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
